services/qw-deployment/qw-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qw-network-policy
spec:
  podSelector:
    matchLabels:
      app: qw-worker
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            # make sure to block link-local addresses,
            # since there's sensitive data in http://metadata
            except:
              - 169.254.0.0/16
  ingress:
